# ResearchDataAnalyzer

./: .env.example  .gitignore  CHANGELOG.md  QUICK_START.md  README.md  __init__.py  main.py  pyproject.toml
analyzers/: __init__.py  blocker_detector.py  confidence_calculator.py  opportunity_scorer.py  quality_filter.py  signal_extractor.py  value_evaluator.py
config/: __init__.py  heuristics.json  quality_config.yaml  sources.json
docker/: Dockerfile  README.md  docker-compose.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_INDEX.md  QUICK_START.md
findings/: index.jsonl
findings/tier_a/: 2025-11-13_ai-generated_exercise_prescriptions.md  2025-11-13_alzheimers_disease_neuroimaging_dataset.md  2025-11-13_aspect-level_sentiment_analysis_dataset.md  2025-11-13_biomedical_image_dataset.md  2025-11-13_cellular_network_measurement_dataset.md  2025-11-13_credit_card_fraud_detection_dataset.md  2025-11-13_e-skin_sensing_data.md  (+23 more)
models/: __init__.py  opportunity.py  paper.py
monitor/: __init__.py  batch_processor.py  continuous_monitor.py
persistence/: __init__.py  output_writer.py
scrapers/: __init__.py  acl_anthology.py  arxiv.py  arxiv_scraper.py  base.py  dblp_scraper.py  openalex_scraper.py  openreview.py  papers_with_code.py  papers_with_code_scraper.py  semantic_scholar.py  semantic_scholar_scraper.py
tests/: __init__.py  conftest.py  test_dblp_scraper.py  test_models.py  test_papers_with_code_scraper.py  test_scrapers.py  test_signal_extractor.py  test_value_evaluator.py
(+28 files in other folders)
