[project]
name = "research-data-analyzer"
version = "0.1.0"
description = "Market research tool for identifying dataset creation opportunities from ML research papers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyzers", "config", "models", "monitor", "persistence", "scrapers"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "DTZ", "T10", "DJ", "PL"]
ignore = ["PLR2004", "PLR0913"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
